@@ -27,6 +27,10 @@ Notes:
   multiple of sector size. Any other value will result in error 0x57
   (ERROR_INVALID_PARAMETER).
 
+20150104
+* corrections in include header
+* updated man page: libcfile.3
+
 20150101
 * 2015 update
 
